Version 0.3.3~dev

	* Add aspect ratio support, closes: #2314.

Version 0.3.2 Released on 2009/09/14

	* Dummy re-release for rebuild.

Version 0.3.1 Released on 2009/09/11

	* Make sure logger is always set, refs: #2320.
	* Add stop_command to stop running streams.
	* Support addition and removal of new streams on reload, closes: #2320.
	* Finer grained comparison to detect already running command changes,
	  refs: #2320.
	* Fork twice to avoid zombies, closes: #2319.

Version 0.3.0 Released on 2009/08/05

	* Rewrite daemon option storage.
	* Add support for reloading configuration on SIGUSR2, closes: #1643.
	* Add support for subcmp ffmpeg option, closes: #2176.
	* Fix a typo in post-command execution.
	* Fix crash trying to start main command, subprocess.Popen needs to be
	  wrapped in try/except due to a bug in subprocess, closes: #2239.
	* Add wrapper script for detecting network connection problems,
	  closes: #2229.

Version 0.2.5 Released on 2009/07/17

	* Fix unsafe usage of dictionaries in Monitor.__print_process_status,
	  closes: #2219.

Version 0.2.4 Released on 2009/06/11

	* Fix scripts being distributed/installed without execution rights.
	* Add a verbose option, closes: #1970.
	* Add sample configuration file.
	* Delay respawn_command execution in SIGCHLD handler, closes: #1971.
	* Fix typo in sample configuration.
	* Add logging per process support, closes: #1917.
	* Add padding and deinterlace options.
	* Update and split man pages.
	* Do not abort trying to start a push when a pre-command fails,
	  closes: #2006.
	* Checks for the return value of pre-commands, refs: #2006.

Version 0.2.3 Released on 2009/05/06

	* Fix incorrect test in post-command executions, closes: #1900.
	* Fix incorrect test for quick death of childs, closes: #1850.

Version 0.2.2 Released on 2009/05/04

	* Make path of ffmpeg's binary configurable, refs: #1847.
	* Do not loop forever waiting children's death, closes: #1850.
	* Add support for audio volume parameter.